; ModuleID = '/home/carl/AnghaBench/curl/src/extr_tool_paramhlp.c_str2offset.c'
source_filename = "/home/carl/AnghaBench/curl/src/extr_tool_paramhlp.c_str2offset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PARAM_NEGATIVE_NUMERIC = common dso_local global i32 0, align 4
@errno = common dso_local global i64 0, align 8
@LONG_MIN = common dso_local global i32 0, align 4
@LONG_MAX = common dso_local global i32 0, align 4
@ERANGE = common dso_local global i64 0, align 8
@PARAM_NUMBER_TOO_LARGE = common dso_local global i32 0, align 4
@PARAM_OK = common dso_local global i32 0, align 4
@PARAM_BAD_NUMERIC = common dso_local global i32 0, align 4
@CURL_OFFT_FLOW = common dso_local global i64 0, align 8
@CURL_OFFT_INVAL = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @str2offset(i32* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  %7 = load i8*, i8** %5, align 8
  %8 = getelementptr inbounds i8, i8* %7, i64 0
  %9 = load i8, i8* %8, align 1
  %10 = sext i8 %9 to i32
  %11 = icmp eq i32 %10, 45
  br i1 %11, label %12, label %14

12:                                               ; preds = %2
  %13 = load i32, i32* @PARAM_NEGATIVE_NUMERIC, align 4
  store i32 %13, i32* %3, align 4
  br label %49

14:                                               ; preds = %2
  store i64 0, i64* @errno, align 8
  %15 = load i8*, i8** %5, align 8
  %16 = call i32 @strtol(i8* %15, i8** %6, i32 0)
  %17 = load i32*, i32** %4, align 8
  store i32 %16, i32* %17, align 4
  %18 = load i32*, i32** %4, align 8
  %19 = load i32, i32* %18, align 4
  %20 = load i32, i32* @LONG_MIN, align 4
  %21 = icmp eq i32 %19, %20
  br i1 %21, label %27, label %22

22:                                               ; preds = %14
  %23 = load i32*, i32** %4, align 8
  %24 = load i32, i32* %23, align 4
  %25 = load i32, i32* @LONG_MAX, align 4
  %26 = icmp eq i32 %24, %25
  br i1 %26, label %27, label %33

27:                                               ; preds = %22, %14
  %28 = load i64, i64* @errno, align 8
  %29 = load i64, i64* @ERANGE, align 8
  %30 = icmp eq i64 %28, %29
  br i1 %30, label %31, label %33

31:                                               ; preds = %27
  %32 = load i32, i32* @PARAM_NUMBER_TOO_LARGE, align 4
  store i32 %32, i32* %3, align 4
  br label %49

33:                                               ; preds = %27, %22
  %34 = load i8*, i8** %6, align 8
  %35 = load i8*, i8** %5, align 8
  %36 = icmp ne i8* %34, %35
  br i1 %36, label %37, label %47

37:                                               ; preds = %33
  %38 = load i8*, i8** %6, align 8
  %39 = load i8*, i8** %5, align 8
  %40 = load i8*, i8** %5, align 8
  %41 = call i32 @strlen(i8* %40)
  %42 = sext i32 %41 to i64
  %43 = getelementptr inbounds i8, i8* %39, i64 %42
  %44 = icmp eq i8* %38, %43
  br i1 %44, label %45, label %47

45:                                               ; preds = %37
  %46 = load i32, i32* @PARAM_OK, align 4
  store i32 %46, i32* %3, align 4
  br label %49

47:                                               ; preds = %37, %33
  %48 = load i32, i32* @PARAM_BAD_NUMERIC, align 4
  store i32 %48, i32* %3, align 4
  br label %49

49:                                               ; preds = %47, %45, %31, %12
  %50 = load i32, i32* %3, align 4
  ret i32 %50
}

declare dso_local i32 @strtol(i8*, i8**, i32) #1

declare dso_local i32 @strlen(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
